Bug 173350. nsIDOMTreeWalker crashes with XUL documents -- this implements some of the unimplemented methods in nsXULDocument. r=jst, sr=bzbarsky